objects/ASI_CRM_Pay_To__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bank_Branch_Code__c</fullName>
        <label>Bank/Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_PRJ_Bank_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRJ Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_To_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pay To External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_to_Eng_Name__c</fullName>
        <label>Pay to Eng Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_to_Name__c</fullName>
        <label>Pay to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_to_No__c</fullName>
        <label>Pay to No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pay To</label>
    <listViews>
        <fullName>ASI_CRM_JP_Pay_To</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Pay_to_No__c</columns>
        <columns>ASI_CRM_Pay_to_Name__c</columns>
        <columns>ASI_CRM_Pay_to_Eng_Name__c</columns>
        <columns>ASI_CRM_Bank_Branch_Code__c</columns>
        <columns>ASI_CRM_Account_Number__c</columns>
        <columns>ASI_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pay_To__c.ASI_CRM_JP_Pay_To</value>
        </filters>
        <label>All JP CRM Pay To</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_JP_CRM_Pay_To</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Pay_to_No__c</columns>
        <columns>ASI_CRM_Pay_to_Name__c</columns>
        <columns>ASI_CRM_Pay_to_Eng_Name__c</columns>
        <columns>ASI_CRM_Bank_Branch_Code__c</columns>
        <columns>ASI_CRM_Account_Number__c</columns>
        <columns>ASI_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pay_To__c.ASI_CRM_JP_Pay_To</value>
        </filters>
        <label>All JP CRM Pay To</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Pay To</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay To</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Pay_To</fullName>
        <active>true</active>
        <label>JP CRM Pay To</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>